--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
 # requirements.txt
 
+certifi==2024.2.2
+charset-normalizer==3.3.2
+idna==3.6
+PiHole-api==2.6
+python-dateutil==2.8.2
+requests==2.31.0
 schedule==1.2.1
+six==1.16.0
+urllib3==2.2.0
